force-app/main/default/objects/Taxonomy_Run_Config__mdt/Taxonomy_Run_Config__mdt.object-meta.xml
<CustomObject>
    <description>Metadata Configuration for Sequencing the order in with Taxo Record Type will be processed. These will be captured with a category value of &quot;Taxo Run Sequence.&quot;. This metadata will also capture batch size configuration for other batches that are run as part of the taxo run as subchains. Any other configuration related to Taxo Run, like the old Taxo version. expiration offset, will also be added to this configuration.</description>
    <label>Taxonomy Run Config</label>
    <pluralLabel>Taxonomy Run Config</pluralLabel>
</CustomObject>