force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Allow_Batch_Run__c.field-meta.xml
<CustomField>
    <fullName>Allow_Batch_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Batch Run</label>
    <type>Checkbox</type>
</CustomField>