force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <description>Batch Name that will be need to be triggered for Processing the Corresponding Taxo Record Type.</description>
    <label>Batch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>