force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>Batch Size for the Corresponding Batch.</description>
    <label>Batch Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>