force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Taxo Run Sequence</fullName>
            </value>
            <value>
                <fullName>Batch Size Config</fullName>
            </value>
            <value>
                <fullName>Taxo Expiration Offset</fullName>
            </value>
            <value>
                <fullName>Nightly Batch Pause</fullName>
            </value>
            <value>
                <fullName>Taxo Run Date Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>