force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to Denote whether the Metadata is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>