force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Is_Taxonomy_Running__c.field-meta.xml
<CustomField>
    <fullName>Is_Taxonomy_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a Taxonomy automation process is currently in progress.
This flag is set to TRUE at the beginning of the BSF_Batch_BSFPortfolio execution and remains true until all chained Taxonomy batches have completed.
Used by downstream processes—such as the Platform Event trigger (Add_Update_OpptyTeamMembers)—to prevent unintended BSF_Batch_OpportunityTeamSync batch executions during Taxonomy processing.</description>
    <inlineHelpText>Indicates whether a Taxonomy automation process is currently in progress.
This flag is set to TRUE at the beginning of the BSF_Batch_BSFPortfolio execution and remains true until all chained Taxonomy batches have completed.
Used by downstream processes—such as the Platform Event trigger (Add_Update_OpptyTeamMembers)—to prevent unintended BSF_Batch_OpportunityTeamSync batch executions during Taxonomy processing.</inlineHelpText>
    <label>Is Taxonomy Running</label>
    <type>Checkbox</type>
</CustomField>