force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Schedule_Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Delay_Minutes__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Gap (in minutes) before starting the next batch.</description>
    <inlineHelpText>Gap (in minutes) before starting the next batch.</inlineHelpText>
    <label>Schedule Delay (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>