force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Numeric Value for the Sequence of Taxo Record Types in Processing Order.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>