force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Taxo_Expiration_Offset__c.field-meta.xml
<CustomField>
    <fullName>Taxo_Expiration_Offset__c</fullName>
    <description>This configuration will be used by the Taxo Old Version Deletion batch to determine how many days after the end date of a version should that get deleted.</description>
    <label>Taxo Expiration Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>