force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Taxo_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Taxo_Record_Type_Name__c</fullName>
    <label>Taxo Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bio Account Portfolio</fullName>
                <default>true</default>
                <label>Bio Account Portfolio</label>
            </value>
            <value>
                <fullName>Bio Booking Support</fullName>
            </value>
            <value>
                <fullName>Bio Collection BSF</fullName>
            </value>
            <value>
                <fullName>Bio Fixed Sites</fullName>
            </value>
            <value>
                <fullName>Bio Recruitment CD</fullName>
            </value>
            <value>
                <fullName>Bio Recruitment Supervisor</fullName>
            </value>
            <value>
                <fullName>Bio Relationship Manager Portfolio</fullName>
            </value>
            <value>
                <fullName>Bio Sickle Cell Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>