force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Taxo_Run_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Taxo_Run_Date_Override__c</fullName>
    <label>Taxo Run Date Override</label>
    <type>Date</type>
</CustomField>