force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Taxonomy_Automation_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Automation_End_DateTime__c</fullName>
    <description>Captures the timestamp when the full Taxonomy processing chain completes. Updated in the final batch of the Taxonomy sequence.</description>
    <inlineHelpText>Captures the timestamp when the full Taxonomy processing chain completes. Updated in the final batch of the Taxonomy sequence.</inlineHelpText>
    <label>Taxonomy Automation End DateTime</label>
    <type>DateTime</type>
</CustomField>