force-app/main/default/objects/Taxonomy_Run_Config__mdt/fields/Taxonomy_Automation_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Automation_Start_DateTime__c</fullName>
    <description>Stores the exact timestamp when the current Taxonomy run begins.
Updated when BSF_Batch_BSFPortfolio starts the Taxonomy chain.</description>
    <inlineHelpText>Stores the exact timestamp when the current Taxonomy run begins.
Updated when BSF_Batch_BSFPortfolio starts the Taxonomy chain.</inlineHelpText>
    <label>Taxonomy Automation Start DateTime</label>
    <type>DateTime</type>
</CustomField>