force-app/main/default/objects/Taxonomy_Run_Config__mdt/listViews/Taxonomy_Run_Config.listView-meta.xml
<ListView>
    <fullName>Taxonomy_Run_Config</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Taxo_Record_Type_Name__c</columns>
    <columns>Sequence__c</columns>
    <columns>Batch_Name__c</columns>
    <columns>Batch_Size__c</columns>
    <columns>Category__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Schedule_Delay_Minutes__c</columns>
    <columns>Taxo_Run_Date_Override__c</columns>
    <columns>Taxo_Expiration_Offset__c</columns>
    <columns>Allow_Batch_Run__c</columns>
    <columns>Is_Taxonomy_Running__c</columns>
    <columns>Taxonomy_Automation_End_DateTime__c</columns>
    <columns>Taxonomy_Automation_Start_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>Taxonomy Run Config</label>
    <language>en_US</language>
</ListView>